--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: A virtual proof that name is awesome!
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Good Design
+  Good Design: "good_design"
   Bad Design
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
