--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ navbar-links:
   About Me: "aboutme"
   Good Design: "good_design"
   Bad Design: "bad_design"
+  Project Proposal: "project_proposal"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
