--- a/_config.yml
+++ b/_config.yml
@@ -46,9 +46,9 @@ navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-col: "	#5f4b8b"
+footer-text-col: "#3e3c15"
+footer-link-col: "#a28ad7"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
