--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ navbar-links:
   Good Design: "good_design"
   Bad Design: "bad_design"
   Project Proposal: "project_proposal"
+  Research Paper: "research_paper"
+  Design Manifesto: "design_manifesto"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
