--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ navbar-links:
   Project Proposal: "project_proposal"
   Research Paper: "research_paper"
   Design Manifesto: "design_manifesto"
+  Project Website: "https://nsang0u.github.io/amarteurs/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
