--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,11 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://nsang0u.github.io/hci"
-baseurl: "/hci"
+
+url: "http://nsang0u.github.io"
+baseurl: ""
+#url: "http://nsang0u.github.io/hci"
+#baseurl: "/hci"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
