--- a/_config.yml
+++ b/_config.yml
@@ -47,13 +47,13 @@ avatar: "/img/IMG_3679CPY.JPG"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#b1faf8"
-navbar-text-col: "#404040"
+navbar-col: "#0d403f"
+navbar-text-col: "#298d8b" #"#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "	#7e95bd "
+footer-col: "#330606"
 footer-text-col: "#9adadf"
 footer-link-col: "	#90eab0"
 
