--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ avatar: "/img/IMG_3679CPY.JPG"
 navbar-col: "#0d403f"
 navbar-text-col: "#298d8b" #"#404040"
 navbar-children-col: "#F5F5F5"
-page-col: "#ccd8dc"#"#FFFFFF"
+page-col: "	#fcfcfc"#"#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#330606"
