--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   email: "nnn1@williams.edu"
-  linkedin: Noah Nsangou
+  linkedin: noahnsangou
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  xing: yourname
