--- a/_config.yml
+++ b/_config.yml
@@ -20,22 +20,19 @@ baseurl: ""
 title: Noah Nsangou
 
 # Short description of your site
-description: Human Computer Interaction at Williams College
+description: My Personal Website
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Course Projects:
+  Projects:
   - HCI - Amarteurs: "hci-amarteurs"
-  Assignments:
-  - Good Design: "good_design"
-  - Bad Design: "bad_design"
-  - Project Proposal: "project_proposal"
-  - Research Paper: "research_paper"
-  - Design Manifesto: "design_manifesto"
-  Project Website: "https://nsang0u.github.io/amarteurs/"
+  - Tweet Mapping: "tweet-mapping"
+  - EphHub - Coming Soon: "ephhub"
+  Resume/CV: "resume"
+  
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
