--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ navbar-children-col: "#F5F5F5"
 page-col: "	#fcfcfc"#"#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#330606"
+footer-col: "#ffffff"
 footer-text-col: "#298d8b"
 footer-link-col: "#9a6c31"
 
