--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ author:
 social-network-links:
   email: "nnn1@williams.edu"
   linkedin: noahnsangou
+  twitter: noahnsangou
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  xing: yourname
