--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: My Personal Website
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  #About Me: "aboutme"
   #Projects:
   #- HCI - Amarteurs: "hci-amarteurs"
   #- Tweet Mapping: "tweet-mapping"
