--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,11 @@ description: My Personal Website
 
 # List of links in the navigation bar
 navbar-links:
-  #About Me: "aboutme"
-  #Projects:
-  #- HCI - Amarteurs: "hci-amarteurs"
-  #- Tweet Mapping: "tweet-mapping"
+  About Me: "aboutme"
+  Projects:
+  - HCI - Amarteurs: "hci-amarteurs"
+  - Tweet Mapping: "tweet-mapping"
+  - NLsPoiler Alert: "nlspoiler-alert"
   #- EphHub - Coming Soon: "ephhub"
   Resume/CV: "resume"
   
